# HbSrc

./: .gitignore
Hb_Cmake/: CMakeLists.txt
Hb_Cmake/include/: MyUDP.h
Hb_Cmake/src/: UdpFunc.cpp  thread.cpp
SzgSrcModule/: LinuxLog.c  LinuxLog.h  Makefile  MyFile.c  MyFile.h  MyGetopt.c  MyIpcMQ.c  MyIpcMQ.h  MyIpcSocket.c  MyIpcSocket.h  MyThread.c  MyThread.h  Pipe.c
SzgSrcModule/data/: a.i
linuxcode/: LinuxLog.h  Makefile  MyUDP.cpp  MyUDP.h  Serial.cpp  Serial.h  UdpFunc.cpp  UdpFunc.h  demo  demo_save1  main.cpp  thread.h
serial/: Makefile  Serial.cpp  Serial.h  main.cpp  serial
version_release/version1_test/: 平板探测器无线命令交互记录.docx
version_release/version1_test/hbi_fpd_ver1.0.4.12-release_build20210329/HBI_DLL/INCLUDES/: HbFpdDll.h
version_release/version1_test/hbi_fpd_ver1.0.4.12-release_build20210329/HBI_FPD_Tool/x64/: HBI_TOOL.CHM
version_release/version1_test/hbi_fpd_ver1.0.4.12-release_build20210329/HBI_FPD_Tool/x64/template/: PDEFECT.map  PGAINA.raw  PGAINB.raw  POFFSET.raw  bad_pix.txt  defect.dld  defect_tp.map  preview_bad_pix.txt  template.ini
version_release/version1_test/hbi_fpd_ver1.0.4.12-release_build20210329/SDK_Demo_Example/HB_STATIC_SDK_DEMO2013/: UpgradeLog.htm
version_release/version1_test/hbi_fpd_ver1.0.4.12-release_build20210329/SDK_Demo_Example/HB_STATIC_SDK_DEMO2013/HB_SDK_DEMO2008/: HB_SDK_DEMO2008.cpp  TemplateTool.cpp  stdafx.cpp  stdafx.h
version_release/version1_test/hbi_fpd_ver1.0.4.12-release_build20210329/SDK_Demo_Example/HB_STATIC_SDK_DEMO2013/HB_SDK_DEMO2008/Cvvimage/: CvvImage.cpp  readme.txt
version_release/version1_test/hbi_fpd_ver1.0.4.12-release_build20210329/SDK_Demo_Example/HB_STATIC_SDK_DEMO2013/HB_SDK_DEMO2008/HBI_DLL/INCLUDES/: HbDllType.h
version_release/version1_test/linuxcode/: demo  demo.sh
version_release/version_test1/第一版文件（内部测试）/: demo.sh  平板探测器无线命令交互记录.docx
version_release/version_test1/第一版文件（内部测试）/hbi_fpd_ver1.0.4.12-release_build20210329/: README.txt
version_release/version_test1/第一版文件（内部测试）/hbi_fpd_ver1.0.4.12-release_build20210329/HBI_DLL/: README.txt
version_release/version_test1/第一版文件（内部测试）/hbi_fpd_ver1.0.4.12-release_build20210329/HBI_DLL/Document/: API_README.txt
version_release/version_test1/第一版文件（内部测试）/hbi_fpd_ver1.0.4.12-release_build20210329/HBI_DLL/INCLUDES/: HbDllError.h
version_release/version_test1/第一版文件（内部测试）/hbi_fpd_ver1.0.4.12-release_build20210329/HBI_FPD_Tool/Document/: factory.csv
version_release/version_test1/第一版文件（内部测试）/hbi_fpd_ver1.0.4.12-release_build20210329/SDK_Demo_Example/HB_STATIC_SDK_DEMO2013/: HB_SDK_DEMO2008.sln
version_release/version_test1/第一版文件（内部测试）/hbi_fpd_ver1.0.4.12-release_build20210329/SDK_Demo_Example/HB_STATIC_SDK_DEMO2013/HB_SDK_DEMO2008/: HB_SDK_DEMO2008.APS  HB_SDK_DEMO2008.h  HB_SDK_DEMO2008.rc  HB_SDK_DEMO2008.vcproj  HB_SDK_DEMO2008.vcxproj  HB_SDK_DEMO2008.vcxproj.filters  HB_SDK_DEMO2008Dlg.cpp  HB_SDK_DEMO2008Dlg.h  ReadMe.txt  TemplateTool.h  resource.h
version_release/version_test1/第一版文件（内部测试）/linuxcode/: LinuxLog.cpp  LinuxLog.h  UdpFunc.cpp  main.cpp
(+3 files in other folders)
